show Password weak or strong

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <input id="inputSignUpPassword" onkeydown="checkPasswordStrongWeak()" type="password"
                 placeholder="Enter Password....">
             <button onclick="savePassword()">SignUp</button>
+            <p id="showPasswordWeakStrong"></p>
             <p id="showSavedMessage" style="color: green;"></p>
             <p id="showAlreadyAccount" style="color: green;"></p>
         </div>
