--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="signUpSection">
             <h3>SignUp Section</h3>
-            <input id="inputSignUpPassword" onkeydown="checkPasswordStrongWeak()" type="password"
+            <input id="inputSignUpPassword" onkeyup="checkPasswordStrongWeak()" type="password"
                 placeholder="Enter Password....">
             <button onclick="savePassword()">SignUp</button>
             <p id="showPasswordWeakStrong"></p>
