--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="signUpSection">
-            <h3>SignUp Section</h3>
-            <input id="inputSignUpPassword" onkeyup="checkPasswordStrongWeak()" type="password"
-                placeholder="Enter Password....">
-            <button onclick="savePassword()">SignUp</button>
-            <p id="showPasswordWeakStrong"></p>
-            <p id="showSavedMessage" style="color: green;"></p>
-            <p id="showAlreadyAccount" style="color: green;"></p>
-        </div>
-        <div class="loginSection">
-            <h3>LogIn Section</h3>
-            <input id="inputLoginPassword" type="password" placeholder="Enter Password....">
-            <button onclick="checkPassWord()">login</button>
-            <p id="correctPasswordMessage" style="color: green;"></p>
-            <p id="inCorrectPasswordMessage" style="color: red;"></p>
+    <div class="containerAll">
+        <h1>User signin SignUp Page</h1>
+        <div class="container">
+            <div class="signUpSection">
+                <h3>SignUp Section</h3>
+                <input id="inputSignUpPassword" onkeyup="checkPasswordStrongWeak()" type="password"
+                    placeholder="Enter Password....">
+                <button onclick="savePassword()">SignUp</button>
+                <p id="showPasswordWeakStrong"></p>
+                <p id="showSavedMessage" style="color: green;"></p>
+                <p id="showAlreadyAccount" style="color: green;"></p>
+            </div>
+            <div class="loginSection">
+                <h3>LogIn Section</h3>
+                <input id="inputLoginPassword" type="password" placeholder="Enter Password....">
+                <button onclick="checkPassWord()">login</button>
+                <p id="correctPasswordMessage" style="color: green;"></p>
+                <p id="inCorrectPasswordMessage" style="color: red;"></p>
+            </div>
         </div>
     </div>
 <script src="script.js"></script>
